minor word change in description meta tag

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- <meta http-equiv="refresh" content="30"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="circle of fifths, circle-of-fifths, guitar chords, beginner guitar, chord fingering, printable, chord diagrams, major chords, minor chords, diminished chords, intervals, key signature, capo, music theory">
-  <meta name="descripton" content="Tool to aid beginner guitarists learning major, minor, and diminished chords across all keys, with and without a capo.">
+  <meta name="descripton" content="Tool to aid beginner guitarists learning major, minor, and diminished chords across all keys, with or without a capo.">
   <meta name="author" , content="Ragusoft Consulting">
   <!-- <meta name="robots" content=""> -->
   <!-- <base href="https://www.w3schools.com/" target="_blank"> -->
