--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!-- <meta http-equiv="refresh" content="30"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content="circle of fifths, circle-of-fifths, guitar chords, beginner guitar, chord fingering, printable, chord diagrams, major chords, minor chords, diminished chords, intervals, key signature, capo, music theory">
-  <meta name="descripton" content="Tool to aid beginner guitarists learning major, minor, and diminished chords across all keys, with or without a capo.">
+  <meta name="keywords" content="circle of fifths, circle-of-fifths, diatonic triads, guitar chords, beginner guitar, chord fingering, printable, chord diagrams, major chords, minor chords, diminished chords, intervals, key signature, capo, music theory">
+  <meta name="descripton" content="Tool to aid beginner guitarists learning major, minor, and diminished open chords across all keys, with or without a capo.">
   <meta name="author" , content="Ragusoft Consulting">
   <!-- <meta name="robots" content=""> -->
   <!-- <base href="https://www.w3schools.com/" target="_blank"> -->
@@ -42,7 +42,7 @@
     <main>
       <div class="freboard-view">
         <h2>
-          Fundamental Chords in the Key of <span id="key-title"></span> Major
+          Diatonic Triad Chords in the Key of <span id="key-title"></span> Major
         </h2>
 
         <div class="fb-group">
@@ -113,15 +113,11 @@
       </div>
     </main>
 
-    <!-- <footer style="position: fixed; bottom: 20px; left: 20px;">
-    <div>Icon made from <a style="color: palegoldenrod;" href="http://www.onlinewebfonts.com/icon">Icon Fonts</a> is licensed by CC BY 3.0</div>
-    </footer> -->
-
     <footer>
       <div class="do-not-print svg-credit">
         Icon made from
         <a style="color: palegoldenrod" href="http://www.onlinewebfonts.com/icon">Icon Fonts</a> is licensed by CC BY 3.0
-      </div>
+    </div>
     </footer>
 
 </body>
