--- a/index.html
+++ b/index.html
@@ -10,25 +10,26 @@
   <meta name="descripton" content="Tool to aid beginner guitarists learning major, minor, and diminished open chords across all keys, with or without a capo.">
   <meta name="author" content="Ragusoft Consulting">
   <!-- <meta name="robots" content=""> -->
-  <!-- <base href="https://www.w3schools.com/" target="_blank"> -->
+  <base href="https://ragusoft.github.io/circle-of-fifths/" target="_blank">
 
   <meta property="og:site_name" content="Circle of Fifths | Guitar Chords">
   <meta property="og:url" content="https://ragusoft.github.io/circle-of-fifths/">
   <meta property="og:type" content="website">
   <meta name="title" property="og:title" content="Circle of Fifths | Guitar Chords">
-  <meta name="image" property="og:image" content="./images/social-screenshot-01.png">
+  <meta name="image" property="og:image" content="./images/social-screenshot-1020x652.png">
 
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="1645">
   <meta property="og:image:height" content="1051">
   <meta name="description" property="og:description" content="Tool to aid beginner guitarists learning major, minor, and diminished open chords across all keys, with or without a capo.">
 
-  <meta name="twitter:card" content="Circle of Fifths | Guitar Chords">
   <!-- <meta name="twitter:site" description="@username"> -->
+  <!-- <meta name="twitter:domain" content="https://ragusoft.github.io/circle-of-fifths/"> -->
+  <!-- <meta name="twitter:image:src" content="./images/social-screenshot-1020x652.png"> -->
   <meta name="twitter:title" content="Circle of Fifths | Guitar Chords" />
+  <meta name="twitter:card" content="Circle of Fifths | Guitar Chords">
   <meta name="twitter:description" content="Tool to aid beginner guitarists learning major, minor, and diminished open chords across all keys, with or without a capo.">
-  <meta name="twitter:image:src" content="./images/social-screenshot-01.png">
-  <meta name="twitter:domain" content="https://ragusoft.github.io/circle-of-fifths/">
+  <meta name="twitter:image" content="./images/social-screenshot-1020x652.png">
 
   <link rel="stylesheet" href="css/styles.css?ver=180" />
   <script type="text/javascript" src="js/app.js?ver=180" defer></script>
