--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="og:url" content="https://ragusoft.github.io/circle-of-fifths/">
   <meta property="og:type" content="website">
   <meta name="title" property="og:title" content="Circle of Fifths | Guitar Chords">
-  <meta name="image" property="og:image" content="./images/social-screenshot-1020x652.png">
+  <meta name="image" property="og:image" content="https://ragusoft.github.io/circle-of-fifths/images/social-screenshot-1020x652.png">
 
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="1645">
@@ -29,9 +29,9 @@
   <meta name="twitter:title" content="Circle of Fifths | Guitar Chords" />
   <meta name="twitter:card" content="Circle of Fifths | Guitar Chords">
   <meta name="twitter:description" content="Tool to aid beginner guitarists learning major, minor, and diminished open chords across all keys, with or without a capo.">
-  <meta name="twitter:image" content="./images/social-screenshot-1020x652.png">
+  <meta name="twitter:image" content="https://ragusoft.github.io/circle-of-fifths/images/social-screenshot-1020x652.png">
 
-  <link rel="stylesheet" href="css/styles.css?ver=180" />
+  <link rel="stylesheet" href="css/styles.css?ver=180">
   <script type="text/javascript" src="js/app.js?ver=180" defer></script>
 
   <link rel="apple-touch-icon" sizes="180x180" href="./images/favicon_io/apple-touch-icon.png">
