experimenting with twitter:card meta tag

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- <meta name="twitter:domain" content="https://ragusoft.github.io/circle-of-fifths/"> -->
   <!-- <meta name="twitter:image:src" content="./images/social-screenshot-1020x652.png"> -->
   <meta name="twitter:title" content="Circle of Fifths | Guitar Chords" />
-  <meta name="twitter:card" content="Circle of Fifths | Guitar Chords">
+  <meta property="twitter:card" content="summary_large_image">
   <meta name="twitter:description" content="Tool to aid beginner guitarists learning major, minor, and diminished open chords across all keys, with or without a capo.">
   <meta name="twitter:image" content="https://ragusoft.github.io/circle-of-fifths/images/social-screenshot-1020x652.png">
 
