--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <base href="https://ragusoft.github.io/circle-of-fifths/" target="_blank">
+
   <!-- <meta http-equiv="refresh" content="30"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="circle of fifths, circle-of-fifths, diatonic triads, guitar chords, beginner guitar, chord fingering, printable, chord diagrams, major chords, minor chords, diminished chords, intervals, key signature, capo, music theory">
   <meta name="descripton" content="Tool to aid beginner guitarists learning major, minor, and diminished open chords across all keys, with or without a capo.">
   <meta name="author" content="Ragusoft Consulting">
   <!-- <meta name="robots" content=""> -->
-  <base href="https://ragusoft.github.io/circle-of-fifths/" target="_blank">
 
   <meta property="og:site_name" content="Circle of Fifths | Guitar Chords">
   <meta property="og:url" content="https://ragusoft.github.io/circle-of-fifths/">
@@ -19,17 +20,17 @@
   <meta name="image" property="og:image" content="https://ragusoft.github.io/circle-of-fifths/images/social-screenshot-1020x652.png">
 
   <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="1645">
-  <meta property="og:image:height" content="1051">
+  <meta property="og:image:width" content="1020">
+  <meta property="og:image:height" content="652">
   <meta name="description" property="og:description" content="Tool to aid beginner guitarists learning major, minor, and diminished open chords across all keys, with or without a capo.">
 
   <!-- <meta name="twitter:site" description="@username"> -->
   <!-- <meta name="twitter:domain" content="https://ragusoft.github.io/circle-of-fifths/"> -->
   <!-- <meta name="twitter:image:src" content="./images/social-screenshot-1020x652.png"> -->
-  <meta name="twitter:title" content="Circle of Fifths | Guitar Chords" />
+  <meta property="twitter:title" content="Circle of Fifths | Guitar Chords" />
   <meta property="twitter:card" content="summary_large_image">
-  <meta name="twitter:description" content="Tool to aid beginner guitarists learning major, minor, and diminished open chords across all keys, with or without a capo.">
-  <meta name="twitter:image" content="https://ragusoft.github.io/circle-of-fifths/images/social-screenshot-1020x652.png">
+  <meta property="twitter:description" content="Tool to aid beginner guitarists learning major, minor, and diminished open chords across all keys, with or without a capo.">
+  <meta property="twitter:image" content="https://ragusoft.github.io/circle-of-fifths/images/social-screenshot-1020x652.png">
 
   <link rel="stylesheet" href="css/styles.css?ver=180">
   <script type="text/javascript" src="js/app.js?ver=180" defer></script>
